# docs/openapi/phase-1.yaml
@@ -4949,6 +4949,10 @@ components:
           minLength: 0
         active:
           type: boolean
+        variantName:
+          type: string
+          maxLength: 255
+          minLength: 0
     LineCounted:
       type: object
       properties:
